=== HEAD

* Add database type support to the mock adapter, e.g. mock://postgres (jeremyevans)

* Allow creation of full text indexes on Microsoft SQL Server, but you need to provide a :key_index option (jeremyevans)

* Allow Dataset#full_text_search usage with prepared statements (jeremyevans)

* Make Dataset#exists use a PlaceholderLiteralString so it works with prepared statements (jeremyevans)

* Fix Dataset#empty? for datasets with offsets when offset support is emulated (jeremyevans)

* Add Dataset#group_rollup and #group_cube methods for GROUP BY ROLLUP and CUBE support (jeremyevans)

* Add support for custom serialization formats to the serialization plugin (jeremyevans)

* Support a :login_timeout option in the jdbc adapter (glebpom) (#406)

=== 3.30.0 (2011-12-01)

* Handle usage of on_duplicate_key_update in MySQL prepared statements (jeremyevans) (#404)

* Make after_commit and after_rollback respect :server option (jeremyevans) (#401)

* Respect :connect_timeout option in the postgres adapter when using pg (glebpom, jeremyevans) (#402)

* Make Dataset#destroy for model datasets respect dataset shard when using a transaction (jeremyevans)

* Make :server option to Model#save set the shard to use (jeremyevans)

* Move Model#set_server from the sharding plugin to the base plugin (jeremyevans)

* Add :graph_alias_base association option for setting base name to use for table aliases when eager graphing (jeremyevans)

* Make ILIKE work correctly on Microsoft SQL Server if database/column collation is case sensitive (jfirebaugh) (#398)

* When starting a new dataset graph, assume existing selection is the columns to select from the current table (jeremyevans)

* Allow specifying nanoseconds and offsets when converting a hash or array to a timestamp (jeremyevans, jfirebaugh) (#395)

* Improve performance when converting Java types to ruby types in the jdbc adapter (jeremyevans, jfirebaugh) (#395)
